--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 
     <section class="slide">
         <h2>Strict</h2>
+
     </section>
 
     <section class="slide">
@@ -136,6 +137,34 @@
         </div>
 
     </section>
+
+    <section class="slide">
+      <img src="pictures/import-schism.png" alt="Great christian schism illustration as a metaphor for typescript and babel different view on imports" class="cover" />
+      <a href="https://itnext.io/great-import-schism-typescript-confusion-around-imports-explained-d512fc6769c2">Great import schism: Typescript confusion around imports explained</a>
+    </section>
+
+    <section class="slide">
+      <h2>--esModuleInterop</h2>
+      <ul>
+        <li>Удобно</li>
+        <li>Стандарт = совместимость</li>
+        <li>Унификация!</li>
+      </ul>
+    </section>
+
+    <section class="slide">
+      <h2>Named imports</h2>
+      <h2>Default imports</h2>
+    </section>
+
+    <section class="slide">
+        <h2>Typescript = ES201* + типы</h2>
+        <ul>
+          <li><s>Experimental decorators</s> => функция pipe</li>
+          <li><s>Enums</s> => строковые литералы</li>
+          <li><s>namespaces</s> => ES6 imports</li>
+        </ul>
+      </section>
 
     <section class="slide" id="cover">
       <h2>Shower Presentation Engine</h2>
