--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Shower Presentation Engine</title>
+    <title>TypeScript: the good parts</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="shower/themes/ribbon/styles/styles.css" />
@@ -16,12 +16,25 @@
         align-items: center;
         justify-content: center;
       }
+
+      header.caption {
+        color: white;
+      }
+
+      .cover.cover {
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+      }
     </style>
   </head>
   <body class="shower list">
     <header class="caption">
       <h1>Typescript: the good parts</h1>
-      <p>Михаил Башуров @saitonakamura</p>
+      <p>
+        Михаил Башуров
+        <a href="https://twitter.com/saitonakamura" target="_blank" rel="noopener noreferrer">@saitonakamura</a>
+      </p>
     </header>
 
     <section class="slide" id="title">
@@ -60,8 +73,58 @@
       </style>
     </section>
 
-    <section class="slide centered">
-      <blockquote class="twitter-tweet" data-lang="ru">
+    <section class="slide" id="me">
+      <div class="columns two">
+        <div>
+          <h2>Михаил Башуров</h2>
+
+          <a class="twitter-link" href="https://twitter.com/saitonakamura" target="_blank" rel="noopener noreferrer"
+            ><img class="twitter-logo" src="pictures/Twitter_Logo_Blue.svg" alt="Лого твиттер" />@saitonakamura</a
+          >
+          <ul>
+            <li>.NET</li>
+            <li>React</li>
+            <li>Typescript</li>
+            <li>...</li>
+          </ul>
+        </div>
+        <div>
+          <a class="github-link" href="https://github.com/saitonakamura" target="_blank" rel="noopener noreferrer"
+            ><img class="github-logo" src="pictures/GitHub-Mark-32px.png" alt="Лого твиттер" />@saitonakamura</a
+          >
+          <ul>
+            <li>Тесты</li>
+            <li>Красивый UI</li>
+            <li>Типы</li>
+            <li>...</li>
+          </ul>
+        </div>
+      </div>
+
+      <style>
+        #me .twitter-link {
+          text-decoration: none;
+        }
+
+        #me .twitter-logo {
+          height: 40px;
+          margin-bottom: -10px;
+        }
+
+        #me .github-link {
+          text-decoration: none;
+        }
+
+        #me .github-logo {
+          height: 32px;
+          margin-bottom: -8px;
+          margin-right: 5px;
+        }
+      </style>
+    </section>
+
+    <section class="slide centered" id="twitter">
+      <blockquote class="twitter-tweet" data-lang="eng">
         <p lang="en" dir="ltr">
           JavaScript. It&#39;s basically TypeScript with implicit `any`, but you don&#39;t have to write any types
         </p>
@@ -69,6 +132,12 @@
         <a href="https://twitter.com/horse_js/status/1057279482447515650?ref_src=twsrc%5Etfw">30 октября 2018 г.</a>
       </blockquote>
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+      <style>
+        #twitter .twitter-tweet {
+          margin-top: -50px;
+        }
+      </style>
     </section>
 
     <section class="slide" id="greyGoo">
@@ -87,46 +156,97 @@
           text-align: center;
           font-size: 90px;
         }
+
+        #greyGoo .cover {
+          /* max-height: initial; */
+        }
       </style>
     </section>
 
     <section class="slide">
-      <h2>
-        any &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; unknown
-      </h2>
       <div class="columns two">
-        <ul>
-          <li>Отключает все проверки</li>
-          <li>Растекается по кодовой базе</li>
-          <li>Полезен в исключительных случаях</li>
-        </ul>
-        <ul>
-          <li>>= typescript@3.0</li>
-          <li>Заставляет сделать рантайм проверки</li>
-          <li>Нужен при общении с внешней средой</li>
-        </ul>
+        <div>
+          <h2>any</h2>
+          <ul>
+            <li>Отключает все проверки</li>
+            <li>Растекается по кодовой базе</li>
+            <li>Полезен в исключительных случаях</li>
+          </ul>
+        </div>
+        <div>
+          <h2>unknown</h2>
+          <ul>
+            <li>>= typescript@3.0</li>
+            <li>Заставляет сделать рантайм проверки</li>
+            <li>Нужен при общении с внешней средой</li>
+          </ul>
+        </div>
       </div>
     </section>
 
-    <section class="slide"><h2>Strict</h2></section>
+    <section class="slide" id="strict">
+      <img src="pictures/san-andreas.jpg" alt="Постер фильма Разлом Сан-Андреас" class="cover" />
+      <h2 class="shout">Strict</h2>
 
-    <section class="slide">
-      <div class="columns two">
-        <p>strictNullChecks asd</p>
-        <p>noImplicitAny dsa</p>
-      </div>
+      <style>
+        #strict .shout {
+          color: white;
+        }
+      </style>
     </section>
 
     <section class="slide">
+      <div class="columns two">
+        <div>
+          <h2>strictNullChecks</h2>
+          <ul>
+            <li>
+              <a
+                href="https://www.infoq.com/presentations/Null-References-The-Billion-Dollar-Mistake-Tony-Hoare"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Ошибка на миллиард долларов</a
+              >
+            </li>
+            <li><code>number | null</code></li>
+          </ul>
+        </div>
+        <div>
+          <h2>noImplicitAny</h2>
+          <ul>
+            <li>any только явно</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="slide" id="schism">
       <img
         src="pictures/import-schism.png"
         alt="Great christian schism illustration as a metaphor for typescript and babel different view on imports"
         class="cover"
       />
-      <a href="https://itnext.io/great-import-schism-typescript-confusion-around-imports-explained-d512fc6769c2"
+      <a
+        class="link"
+        href="https://itnext.io/great-import-schism-typescript-confusion-around-imports-explained-d512fc6769c2"
+        target="_blank"
+        rel="noopener noreferrer"
         >Great import schism: Typescript confusion around imports explained</a
       >
+
+      <style>
+        #schism .cover {
+          /* max-width: initial; */
+          /* max-height: initial; */
+        }
+
+        #schism .link {
+          position: absolute;
+          color: white;
+          bottom: 32px;
+          left: 140px;
+        }
+      </style>
     </section>
 
     <section class="slide">
@@ -139,8 +259,27 @@
     </section>
 
     <section class="slide">
-      <h2>Named imports</h2>
-      <h2>Default imports</h2>
+      <div class="columns two">
+        <div>
+          <h2>Named imports</h2>
+          <ul>
+            <li>Рефакторинг</li>
+            <li>Реэкспорт</li>
+            <li>Автоимпорт</li>
+            <li>Тришейкинг</li>
+          </ul>
+        </div>
+        <div>
+          <h2>Default imports</h2>
+          <ul>
+            <li>Совместимость с require</li>
+            <li><s>Рефакторинг</s></li>
+            <li><code>export { default } from './module'</code></li>
+            <li><s>Автоимпорт</s></li>
+            <li><s>Тришейкинг</s></li>
+          </ul>
+        </div>
+      </div>
     </section>
 
     <section class="slide">
@@ -168,6 +307,17 @@
       </ul>
     </section>
 
+    <section class="slide" id="terminator">
+      <img src="pictures/terminator.jpg" alt="Т-100 из фильма Терминатор" class="cover" />
+      <h2 class="shout">Линтеры</h2>
+
+      <style>
+        #terminator .shout {
+          color: white;
+        }
+      </style>
+    </section>
+
     <section class="slide">
       <h2>Линтеры</h2>
       <ul>
@@ -179,184 +329,105 @@
     </section>
 
     <section class="slide">
-      <h2>Type</h2>
-      <h2>Interface</h2>
+      <div class="columns two">
+        <div>
+          <h2>Type</h2>
+          <ul>
+            <li>Более гибко <code>& |</code></li>
+            <li>Чуть меньше писать</li>
+            <li>Нет слияния деклараций</li>
+          </ul>
+        </div>
+        <div>
+          <h2>Interface</h2>
+          <ul>
+            <li>Слияние деклараций</li>
+          </ul>
+        </div>
+      </div>
     </section>
 
     <section class="slide"><h2>Классы</h2></section>
 
     <section class="slide">
-      <h2>bind(this)</h2>
-      <h2>bound class fields</h2>
-    </section>
-
-    <section class="slide"><h2>babel 7</h2></section>
-
-    <section class="slide"><h2>Генерить в рантайм по типу</h2></section>
-
-    <section class="slide" id="cover">
-      <h2>Shower Presentation Engine</h2>
-      <p>Brought to you by <a href="http://pepelsbey.net">Vadim Makeev</a></p>
-      <figure>
-        <img class="cover" src="pictures/cover.jpg" alt="Hands on the orange typewriter in a park" />
-        <figcaption class="copyright right white"><a href="http://fiftyfootshadows.net/">© John Carey</a></figcaption>
-      </figure>
-      <style>
-        #cover h2 {
-          margin: 30px 0 0;
-          color: white;
-          text-align: center;
-          font-size: 70px;
-        }
-
-        #cover p {
-          margin: 10px 0 0;
-          text-align: center;
-          color: white;
-          font-style: italic;
-          font-size: 20px;
-        }
-
-        #cover p a {
-          color: white;
-        }
-      </style>
-    </section>
-
-    <section class="slide">
-      <h2>Shower key features</h2>
-      <ol>
-        <li>Built on HTML, CSS and JavaScript</li>
-        <li>Works in all modern browsers</li>
-        <li>Themes are separated from engine</li>
-        <li>Fully keyboard accessible</li>
-        <li>Printable to PDF</li>
-      </ol>
-      <p class="note">Shower ['ʃəuə] noun. A person or thing that shows.</p>
-    </section>
-
-    <section class="slide">
-      <h2>Plain text on your slides</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur <a href="#4">adipisicing</a> elit, sed do eiusmod tempor incididunt ut
-        labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud</em> exercitation ullamco laboris
-        <strong>nisi ut aliquip</strong> ex ea commodo consequat. Duis aute irure <i>dolor</i> in reprehenderit in
-        voluptate velit esse cillum <b>dolore</b> eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in <code>&lt;culpa&gt;</code> qui officia deserunt mollit anim id est laborum.
-      </p>
-    </section>
-
-    <section class="slide">
-      <h2>Two columns if you like</h2>
       <div class="columns two">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
-        </p>
-        <p>
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.
-        </p>
+        <div>
+          <h2>Bind</h2>
+          <ul>
+            <li><code>this.handle = this.handle.bind(this)</code></li>
+            <li>Больше писать</li>
+            <li>Сложнее поддерживать</li>
+            <li>Стандарт</li>
+            <li>Чуть быстрее</li>
+          </ul>
+        </div>
+        <div>
+          <h2>bound class fields</h2>
+          <ul>
+            <li><code>handle = val => this.setState({ val })</code></li>
+            <li>Кратко</li>
+            <li>Удобно</li>
+            <li>Еще нет в стандарте</li>
+            <li>Менее производительные</li>
+          </ul>
+        </div>
       </div>
     </section>
 
     <section class="slide">
-      <h2>All kind of lists</h2>
-      <ol>
-        <li>Simple lists are marked with bullets</li>
-        <li>Ordered lists begin with a number</li>
-        <li>
-          You can even nest lists one inside another
-          <ul>
-            <li>Or mix their types</li>
-            <li>But do not go too far</li>
-            <li>Otherwise audience will be bored</li>
-          </ul>
-        </li>
-        <li>Look, seven rows exactly!</li>
-      </ol>
+      <h2>babel 7</h2>
+      <ul>
+        <li>@babel/preset-typescript</li>
+      </ul>
     </section>
 
     <section class="slide">
-      <h2>Serious citations</h2>
-      <figure>
-        <blockquote>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.
-          </p>
-        </blockquote>
-        <figcaption>Marcus Tullius Cicero</figcaption>
-      </figure>
-    </section>
-
-    <section class="slide">
-      <h2>Code samples</h2>
+      <h2>Генерить в рантайм по типу</h2>
+      <ul>
+        <li>Валидация Json</li>
+        <li>Prop-types</li>
+      </ul>
       <pre>
-            <code>&lt;!DOCTYPE html&gt;</code>
-            <code class="mark">&lt;html lang="en"&gt;</code>
-            <code><mark>&lt;head&gt;</mark> <span class="comment">&lt;!--Comment--&gt;</span></code>
-            <code>    &lt;title&gt;Shower&lt;/title&gt;</code>
-            <code>    &lt;meta charset="<mark class="important">UTF-8</mark>"&gt;</code>
-            <code>    &lt;link rel="stylesheet" href="screen.css"&gt;</code>
-            <code><mark>&lt;/head&gt;</mark></code>
-        </pre>
+        <code>type Task = { title: string }</code>
+        <code>const json = JSON.parse("{}")</code>
+        <code>const isValid = validate&lt;Task&gt;(json)</code>
+      </pre>
     </section>
 
-    <section class="slide">
-      <h2>Even tables</h2>
-      <table>
-        <tr>
-          <th scope="col">Locavore</th>
-          <th>Umami</th>
-          <th>Helvetica</th>
-          <th>Vegan</th>
-        </tr>
-        <tr>
-          <th scope="row">Fingerstache</th>
-          <td>Kale</td>
-          <td>Chips</td>
-          <td>Keytar</td>
-        </tr>
-        <tr>
-          <th scope="row">Sriracha</th>
-          <td>Gluten-free</td>
-          <td>Ennui</td>
-          <td>Keffiyeh</td>
-        </tr>
-        <tr>
-          <th scope="row">Thundercats</th>
-          <td>Jean</td>
-          <td>Shorts</td>
-          <td>Biodiesel</td>
-        </tr>
-        <tr>
-          <th scope="row">Terry</th>
-          <td>Richardson</td>
-          <td>Swag</td>
-          <td>Blog</td>
-        </tr>
-      </table>
-
-      <p>It’s good to have information organized.</p>
+    <section class="slide" id="links">
+      <ul>
+        <li>
+          <a href="https://twitter.com/saitonakamura" target="_blank" rel="noopener noreferrer">@saitonakamura</a>
+        </li>
+        <li>
+          <a
+            href="https://www.infoq.com/presentations/Null-References-The-Billion-Dollar-Mistake-Tony-Hoare"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Ошибка на миллиард долларов</a
+          >
+        </li>
+        <li>
+          <a
+            class="link"
+            href="https://itnext.io/great-import-schism-typescript-confusion-around-imports-explained-d512fc6769c2"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Great import schism: Typescript confusion around imports explained</a
+          >
+        </li>
+      </ul>
     </section>
 
-    <section class="slide" id="picture">
-      <h2>Pictures</h2>
-      <figure>
-        <img class="cover" src="pictures/picture.jpg" alt="Orange typewriter on a wooden table close-up" />
-        <figcaption class="copyright right white"><a href="http://fiftyfootshadows.net/">© John Carey</a></figcaption>
-      </figure>
+    <section class="slide" id="end">
+      <h2 class="shout"><a href="http://bit.ly/ts-good-parts">bit.ly/ts-good-parts</a></h2>
+
       <style>
-        #picture h2 {
-          color: white;
+        #end .shout {
+          font-size: 130px;
         }
       </style>
     </section>
-
-    <section class="slide"><h2 class="shout shrink">You can even shout this way</h2></section>
 
     <section class="slide">
       <h2>Inner navigation</h2>
@@ -367,23 +438,6 @@
         <li class="next">But it will work only once</li>
         <li class="next">Nobody wants to see the same joke twice</li>
       </ol>
-    </section>
-
-    <section class="slide" id="see-more">
-      <h2 class="shout">
-        <img src="pictures/logo.svg" alt="Shower logo" />
-        <a href="https://github.com/shower/shower">See more on GitHub</a>
-      </h2>
-      <style>
-        #see-more h2 {
-          font-size: 100px;
-        }
-
-        #see-more img {
-          width: 0.72em;
-          height: 0.72em;
-        }
-      </style>
     </section>
 
     <footer class="badge"><a href="https://github.com/shower/shower">Fork me on GitHub</a></footer>
