--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
     </section>
 
     <section class="slide" id="end">
-      <h2 class="shout"><a href="http://bit.ly/ts-good-parts">bit.ly/ts-good-parts</a></h2>
+      <h2 class="shout"><a href="http://bit.ly/ts_good_parts">bit.ly/ts_good_parts</a></h2>
 
       <style>
         #end .shout {
