--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@
     </section>
 
     <section class="slide" id="links">
+      <h2>Всякая всячина</h2>
       <ul>
         <li><a href="https://twitter.com/saitonakamura" target="_blank" rel="noopener noreferrer">Twitter</a></li>
         <li><a href="https://github.com/saitonakamura" target="_blank" rel="noopener noreferrer">Github</a></li>
