--- a/index.html
+++ b/index.html
@@ -437,6 +437,15 @@
       </pre>
     </section>
 
+    <section class="slide">
+      <h2>А выводы?</h2>
+      <blockquote>
+        Пользуйтесь солнцезащитными кремами Если бы я мог дать вам только один совет на будущее, он был бы как раз про
+        солнцезащитные кремы. Выгода их использования была доказана учеными, в то время, как остальные мои рекомендации
+        не имеют более надежной основы, чем собственный путанный опыт. Эти советы я <s>сейчас изложу</s> уже изложил.
+      </blockquote>
+    </section>
+
     <section class="slide" id="links">
       <h2>Всякая всячина</h2>
       <ul>
